--- a/gpu_path_tracer/CMakeLists.txt
+++ b/gpu_path_tracer/CMakeLists.txt
@@ -22,5 +22,11 @@ add_compile_definitions(
 )
 
 # setup cuda version
+# SET(CMAKE_EXE_LINKER_FLAGS    "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:LIBCMT" )
+# set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -arch=sm_70 -dc")
+# set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -x cu -arch=sm_70 -dc")
+# set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -x cu -arch=sm_70")
 set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -arch=sm_70")
 set_target_properties(${PROJECT_NAME} PROPERTIES CUDA_ARCHITECTURES "70")
+# set_target_properties(${PROJECT_NAME} PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+# set_target_properties(${PROJECT_NAME} PROPERTIES CUDA_RESOLVE_DEVICE_SYMBOLS ON)
