implement mat (bugs remain)

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -1,9 +1,10 @@
 # clean cache at every build
 set(COMMON_SOURCES
+    ${PROJECT_SOURCE_DIR}/common/Settings.hpp
     ${PROJECT_SOURCE_DIR}/common/CudaPortable.hpp
     ${PROJECT_SOURCE_DIR}/common/OBJ_Loader.hpp
     ${PROJECT_SOURCE_DIR}/common/Object.hpp
-    ${PROJECT_SOURCE_DIR}/common/Sphere.hpp
+    # ${PROJECT_SOURCE_DIR}/common/Sphere.hpp
     ${PROJECT_SOURCE_DIR}/common/Triangle.hpp
     ${PROJECT_SOURCE_DIR}/common/Triangle.cpp
     ${PROJECT_SOURCE_DIR}/common/Scene.cpp
